Back faces flicker when Auto Depth and Backface Culling is enabled #74805

Closed
opened 2020-03-16 09:43:27 +01:00 by Oleg · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-15 22:43, hash: f06a6e92bc
Worked: c26f470cfe is last I can check

Short description of error
Back faces flicker when Auto Depth and Backface Culling is enabled at same time.

Exact steps for others to reproduce the error
Enable Auto Depth in settings. Enable Backface Culling in Viewport Shading.
Create Cube and delete couple of faces. Try to rotate around and zoom - back faces starting to flicker.
Gif with bug:
Auto Depth + Backface Culling Flickering.gif

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-15 22:43, hash: `f06a6e92bc` Worked: c26f470cfeea is last I can check **Short description of error** Back faces flicker when Auto Depth and Backface Culling is enabled at same time. **Exact steps for others to reproduce the error** Enable Auto Depth in settings. Enable Backface Culling in Viewport Shading. Create Cube and delete couple of faces. Try to rotate around and zoom - back faces starting to flicker. Gif with bug: ![Auto Depth + Backface Culling Flickering.gif](https://archive.blender.org/developer/F8409520/Auto_Depth___Backface_Culling_Flickering.gif)
Author

Added subscriber: @DotBow

Added subscriber: @DotBow

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I'm able to reproduce it as well. I can also confirm that it only happens when you activate User Preferences -> Navigation -> Auto Depth.

2020-03-18 11-59-31.mp4

flickering_backfaces.blend

I'm able to reproduce it as well. I can also confirm that it only happens when you activate `User Preferences -> Navigation -> Auto Depth`. [2020-03-18 11-59-31.mp4](https://archive.blender.org/developer/F8413682/2020-03-18_11-59-31.mp4) [flickering_backfaces.blend](https://archive.blender.org/developer/F8413683/flickering_backfaces.blend)

Added subscriber: @vignette

Added subscriber: @vignette

This issue was referenced by a250be980a

This issue was referenced by a250be980a13d487099873bb5edf9c797b701ca1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-04-17 14:58:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74805
No description provided.