Fix T74805 Workbench: Back faces flicker with Auto Depth is enabled